# react-full-calendar

./: .env  .gitignore  cloudbaserc.json  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/account/: index.tsx
src/account/layout/: index.tsx
src/account/pages/: account-page.tsx
src/ai/: index.tsx
src/ai/components/: chat-message.tsx  chat-messages.tsx  chat-starter-actions.tsx  chat-starter-disclaimer.tsx  chat-starter-input.tsx  chat-starter.tsx
src/ai/layout/: index.tsx
src/ai/mock/: ai-models.ts  chat-starter.ts  chat-threads.ts  index.ts  messages.ts  model-options.ts
src/ai/pages/: chat.tsx  start.tsx
src/ai/types/: chat.ts  index.ts  pages.ts
src/auth/: index.ts  require-auth.tsx
src/auth/adapters/: auth-adapter.ts
src/auth/context/: auth-context.tsx
src/auth/layouts/: auth-layout.tsx
src/auth/lib/: helpers.ts  models.ts
src/auth/pages/: signin-page.tsx
src/auth/providers/: auth-provider.tsx
src/calendar/: index.tsx
src/calendar/context/: calendar-data-context.tsx
src/hooks/: use-calendar-events.ts
src/i18n/: calendar-locale.ts  i18n-context.tsx  index.ts
src/lib/: calendar-events.ts  supabase-storage.ts  supabase.ts  user-repository.ts
src/mail/: index.tsx
src/providers/: modules-provider.tsx
src/settings/: index.tsx
src/store-inventory/: index.tsx
src/styles/: globals.css
supabase/migrations/: 001_create_calendar_events.sql  002_recreate_calendar_events_with_text_user_id.sql  003_add_user_preferences.sql  storage_policies.sql
(+55 files in other folders)
