[package]
name = "ricecal"
version = "1.0.0"
description = "RiceCal - Smart Calendar & Meeting Management"
authors = ["you"]
edition = "2021"

[[bin]]
name = "ricecal"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
